Fixes issue 16: increase footer text contrast.

--- a/server/main/static/main/common.css
+++ b/server/main/static/main/common.css
@@ -254,7 +254,7 @@ div.errorMessage > a.close {
 /* Footer area */
 .footer-text {
     border-top: 1px solid #ccc;
-    color: #ccc;
+    color: #767676;
     font-size: 0.85em;
     margin-top: 20px;
     padding: 20px;
